Hold and supervisor implementation

--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
@@ -60,7 +60,9 @@
 		"UNMUTE_SOUND": "Unmute sound",
 		"ZOOM_IN": "Zoom in",
 		"ZOOM_OUT": "Zoom out",
-		"REPLACE_SCREEN": "Replace screen"
+		"REPLACE_SCREEN": "Replace screen",
+		"HOLD": "Hold the participant",
+		"UNHOLD": "UnHold the participant"
 	},
 	"PANEL": {
 		"CLOSE": "Close",
