--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
@@ -128,6 +128,7 @@
 		"SCREEN_SUPPORT": "Your browser does not support screen sharing",
 		"MEDIA_ACCESS": "Access to media devices was not allowed.",
 		"DEVICE_NOT_FOUND": "No video or audio devices have been found. Please, connect at least one.",
-		"SST_CONNECTION": "Connection lost. Reconnecting to the speech to text service ..."
+		"SST_CONNECTION": "Connection lost. Reconnecting to the speech to text service ...",
+		"TOGGLE_PLAYVIDEO":"No Video file found to Publish."
 	}
 }
