Multiple form icdc implementation

--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/lang/en.json
@@ -52,7 +52,7 @@
 		"PAUSE_VIDEO": "Pause video",
 		"ADD_SUPERVISOR": "Add Supervisor",
 		"MERGE_CALL": "Merge call",
-		"QUESTION": "Question Panel Button"
+		"QUESTION": "ICDC Panel"
 	},
 	"STREAM": {
 		"SETTINGS": "Settings",
